add anime newsl series

--- a/AnimeFanservice/00 - [Download] Link to 3500+ Anime Image Galleries.html
+++ b/AnimeFanservice/00 - [Download] Link to 3500+ Anime Image Galleries.html
@@ -1,12 +1,11 @@
 <?
 $downloadPage = 'https://animefanservice.org/download-anime-galleries-download-page/';
 ?>
+<p>Hi <?=$nameVar?>, </p>
 
-<p>Dear Anime Fan,</p>
+<p>Welcome to the Anime newsletter. Here you will receive updates regarding anime fanservice and everything related to anime. You will also receive occasional discounts on our online store. Our suppliers have plenty of merchandise in stock and are ready to process your orders.</p>
 
-<p>Welcome to the Anime newsletter. Here you will receive updates regarding anime fanservice and everything related to anime. You will also receive occasional discounts on our online store. Our suppliers have plenty of merchandise in stock and are ready to process your orders.</p> 
-
-<p>To get our 5000+ image galleries, click the link below <a href="<?=$downloadPage?>" target="_BLANK"><?=$downloadPage?></a></p>
+<p>To get our 5000+ image galleries, click the link below <br /> <a href="<?=$downloadPage?>" target="_BLANK"><?=$downloadPage?></a></p>
 
 <p>To direct download original sound tracks, click the link below <a href="<?=$downloadPage?>" target="_BLANK"><?=$downloadPage?></a></p>
 
