--- a/NeobuxUltimateStrategy/00 - [Download] Your Free Neobux Report.html
+++ b/NeobuxUltimateStrategy/00 - [Download] Your Free Neobux Report.html
@@ -1,6 +1,5 @@
-<?
-$freeDownload = 'http://neobuxultimatestrategy.com/basics';
-$neobuxReferralLink = 'https://neobuxultimatestrategy.com/redirect.php?url=neobuxReferralLink';
+<?php
+$freeDownload = $domain.'basics';
 ?>
 <p>Hi <?=$nameVar?>,</p>
 
@@ -17,7 +16,7 @@ $neobuxReferralLink = 'https://neobuxultimatestrategy.com/redirect.php?url=neobu
 <p>&nbsp;</p>
 
 <p>If you have not joined Neobux yet, then please do so through this link: <br />
-<a href="<?=$neobuxReferralLink?>" target="_blank">http://www.neobux.com</a> </p>
+<a href="http://www.neobux.com" target="_blank">http://www.neobux.com</a> </p>
 
 <p>Founded in 2008, Neobux is the #1 PTC Site, with over 20 million members. Many people join Neobux as their first PTC and then join other PTC's, so if you haven't joined yet, you are missing out on something big. </p>
 
@@ -29,7 +28,7 @@ $neobuxReferralLink = 'https://neobuxultimatestrategy.com/redirect.php?url=neobu
 </p>
 
 <center>
-<a href="http://neobuxultimatestrategy.com/basics" target="_blank"><img src="http://neobuxultimatestrategy.com/images/newsletter/NeobuxBasicsEbook.png"></a>
+<a href="<?=$domain?>basics" target="_blank"><img src="<?=$domain?>images/newsletter/NeobuxBasicsEbook.png"></a>
 </center>
 
 <p>Neobux Basics is yours completely free, and not only that, but you can freely distribute it to anyone you wish. </p>
@@ -45,6 +44,6 @@ $neobuxReferralLink = 'https://neobuxultimatestrategy.com/redirect.php?url=neobu
 <p>Again, thank you for taking the time to read this. <br />
 Go ahead and download your <b>free ebook</b> now. </p>
 
-<p>==> <a href="<?=$freeDownload?>"><?=$freeDownload?></a></p>
+<p>==> <a href="<?=$freeDownload?>" target="_blank"><?=$freeDownload?></a></p>
 
 <p>Happy earnings!</p>
